Edited wiki page through web user interface.

--- a/wiki/InstallElvin.wiki
+++ b/wiki/InstallElvin.wiki
@@ -1,4 +1,8 @@
 #labels Phase-Deploy,Deprecated
+_Update: the Elvin project is no longer available.  Use Spread instead. See SpreadMessaging_
+
+----
+
 Elvin has two parts - libelvin and elvind
 
 
