--- a/eddie/trunk/doc/README
+++ b/eddie/trunk/doc/README
@@ -5,7 +5,7 @@ It is still being continuously developed but is very stable in its current
 form and has been used in production for over 5 years (it is the primary
 monitoring tool at the author's places of employment, for example).
 
-Documentation is online at http://eddie-tool.net/doc/ and in the doc
+Documentation is online at http://eddie-tool.psychofx.com/doc/ and in the doc
 directory of the EDDIE-Tool distribution.
 
 You need to create a config directory where config.sample is located
@@ -21,7 +21,7 @@ See README.OpenBSD.txt if you are installing on OpenBSD.
 
 See LICENSE.txt for licensing details.
 
-See http://eddie-tool.net/ for more information.
+See http://eddie-tool.psychofx.com/ for more information.
 
 Email eddie-info at eddie-tool dot net for information/help/tips/
 comments/etc or join one of the mailing lists.  On IRC try #eddie-tool on
